--- a/osv/templates/boxes/ThreadsTable.html
+++ b/osv/templates/boxes/ThreadsTable.html
@@ -1,7 +1,7 @@
 <div class="graph_type_1 col-lg-6">
     <table class="table">
       <thead>
-      <tr><td></td> <td> name </td> <td> ID </td> <td> cpu_ms </td> </tr>
+      <tr><td></td> <td> name </td> <td> ID </td> <td> %CPU </td> </tr>
       </thead>
     {{#each threads }}
       <tr> 
@@ -12,7 +12,7 @@
         </td> 
         <td>{{ name }}</td>  
         <td>{{ id }}</td> 
-        <td>{{ cpu_ms }}</td>  
+        <td>{{ percent }}</td>  
       </tr>
     {{/each}}
     </table>
