--- a/osv/templates/boxes/CPUTable.html
+++ b/osv/templates/boxes/CPUTable.html
@@ -1,10 +1,24 @@
 <div class="graph_type_1 col-lg-6">
-	<h5>CPU Usage</h5>>
-    <table class="table">
-    {{#each this }}
+  <h5>CPU Usage</h5>
+    <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>CPU</th>
+        {{#each timePoints}}
+        <th>{{this}}</th>
+        {{/each}}
+        <th>Usage</th>
+        <th>Running</th>
+      </tr>
+    </thead>
+    {{#each cpus }}
       <tr> 
         <td>{{ name }}</td>  
+        {{#each timeline}}
+        <td>{{this}}</td>
+        {{/each}}
         <td>{{ usage }}</td>  
+        <td>{{ running }}</td>
       </tr>
     {{/each}}
     </table>
