Changed Tracepoints list to a table
In order for the graphs to be aligned to eachother, I have changed the
template to use tables instead of lists.

--- a/osv/templates/boxes/TracePointLine.html
+++ b/osv/templates/boxes/TracePointLine.html
@@ -1,6 +1,6 @@
-<li data-tracepoint="{{name}}" class="list-group-item" style="height: 50px">
-	<span class="name">{{name}}</span>
-	<canvas style="vertical-align:top; margin: 0 30px" id="smoothie-{{name}}" width="300" height="30px"></canvas>
-	<span class="count" style="margin-right:20px">{{count}}</span>
-	<div class="removeTrace" data-id="{{name}}" style="display:inline-block; cursor:pointer;"> <i class="fa fa-minus-circle"></i> </div>
-</li>
+<tr data-tracepoint="{{name}}">
+  <td><span class="name">{{name}}</span></td>
+  <td><canvas style="vertical-align:top; margin: 0 30px" id="smoothie-{{name}}" width="300" height="30px"></canvas></td>
+  <td><span class="count" style="margin-right:20px">{{count}}</span></td>
+  <td><div class="removeTrace" data-id="{{name}}" style="display:inline-block; cursor:pointer;"> <i class="fa fa-minus-circle"></i> </div></td>
+</tr>
