--- a/osv/templates/boxes/TracePoints.html
+++ b/osv/templates/boxes/TracePoints.html
@@ -2,7 +2,8 @@
   <div class="panel-heading">
     <h3 class="panel-title">Selected Tracepoints</h3>
   </div>
-    <ul class="list-group" style="max-height:500px; overflow:auto;">
-    </ul>
+    <table class="table">
+    <tbody></tbody>
+	</table>
 </div>
 
