--- a/osv/templates/boxes/TracePoints.html
+++ b/osv/templates/boxes/TracePoints.html
@@ -5,5 +5,6 @@
     <table class="table">
     <tbody></tbody>
 	</table>
+	<button type="button" class="btn btn-danger clearAll">Clear all</button>
 </div>
 
