--- a/osv/templates/boxes/ThreadsTable.html
+++ b/osv/templates/boxes/ThreadsTable.html
@@ -1,5 +1,4 @@
-<div class="graph_type_1 col-lg-6">
-    <table class="table">
+    <table class="graphHolder col-lg-6 table">
       <thead>
       <tr><td></td> <td> name </td> <td> ID </td> <td> %CPU </td> </tr>
       </thead>
@@ -16,4 +15,3 @@
       </tr>
     {{/each}}
     </table>
-</div>
