--- a/public/dashboard_static/styles/style.css
+++ b/public/dashboard_static/styles/style.css
@@ -33,11 +33,6 @@ html,body{height:100%; background-color: #f8f8f8;}
     padding-top: 8px;
 }
 
-li{
-    position:absolute;
-    margin-left:0px;
-    height:30px;
-}
 .nav-tabs {
     border-bottom: 1px #232323 solid;
 }
@@ -255,3 +250,36 @@ span.status { color: #333; font-size: 10px; vertical-align: top;}
 .colorMap {font-size: 10px;}
 .colorMap span { vertical-align: middle }
 .colorMap .status { height:10px; width: 10px; border: 1px solid #ddd; display: inline-block; vertical-align: middle}
+
+.MBeans,
+.MBeans ul,
+.MBeans ul ul {
+    list-style: none;
+    padding-left: 15px
+
+}
+
+.MBeans li.parent {
+    position: relative;
+    left: -20px;
+}
+.MBeans li.parent:before{
+    content: "\f0fe";
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    margin-right:5px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+.MBeans li.parent.opened:before{
+    content: "\f146";
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    margin-right:5px;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
