--- a/public/dashboard_static/styles/style.css
+++ b/public/dashboard_static/styles/style.css
@@ -283,3 +283,10 @@ span.status { color: #333; font-size: 10px; vertical-align: top;}
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
+.tabluarDataControllers {
+    text-align: center;
+}
+.tabluarDataControllers i {
+    cursor: pointer;
+}
