--- a/public/dashboard_static/styles/style.css
+++ b/public/dashboard_static/styles/style.css
@@ -290,3 +290,9 @@ span.status { color: #333; font-size: 10px; vertical-align: top;}
 .tabluarDataControllers i {
     cursor: pointer;
 }
+.MBeans li { 
+    cursor: pointer
+}
+.MBeans .selected {
+    color: #4599E4;
+}
