changed load map table to bootstrap table

--- a/osv/templates/boxes/cassandra/StaticInfo.html
+++ b/osv/templates/boxes/cassandra/StaticInfo.html
@@ -13,7 +13,7 @@
       <tr>
         <td>Load Map</td>
         <td>
-          <table>
+          <table class="table table-striped">
             {{#each loadMap}}
             <tr>
               <td>{{@key}}</td>
