--- a/osv/templates/boxes/GraphBox.html
+++ b/osv/templates/boxes/GraphBox.html
@@ -1,8 +1,8 @@
 <div class="graphHolder col-lg-6">
     <div class="row">
         <div class="col-xs-10">
-            <h5>{{ title }}</h5>
         </div>
     </div>
     <div class="graphBorder"></div>
+    <div class="jqplot"></div>
 </div>
