--- a/osv/templates/boxes/GraphBox.html
+++ b/osv/templates/boxes/GraphBox.html
@@ -1,4 +1,10 @@
-<div class="graphHolder col-lg-6">
+<div class="roundedContainer smallGraph col-lg-6">
+	<div class="row graph_header">
+	    <div class="col-xs-11">
+	        <h4>{{ title }}</h4>
+	    </div>
+	    <div class="col-xs-1 confGraph"><a href=""><span class="glyphicon glyphicon-cog"></span></a></div>
+	</div>
     <div class="row">
         <div class="col-xs-10">
         </div>
