--- a/osv/templates/boxes/StaticBox.html
+++ b/osv/templates/boxes/StaticBox.html
@@ -1,4 +1,4 @@
-<div class="graphHolder col-lg-6">
+<div class="roundedContainer smallGraph col-lg-6">
     <table class="table">
         {{#each this }}
         <tr>
