--- a/osv/templates/boxes/MBeansAttributesBox.html
+++ b/osv/templates/boxes/MBeansAttributesBox.html
@@ -1,4 +1,4 @@
-<table class="graphHolder table MBeansAttributes">
+<table class="roundedContainer smallGraph table MBeansAttributes">
   <thead>
     <th>Key</th>
     <th>Value</th>
