--- a/osv/templates/boxes/SideTextGraphBox.html
+++ b/osv/templates/boxes/SideTextGraphBox.html
@@ -1,10 +1,10 @@
-<div class="graphHolder col-lg-6">
+<div class="roundedContainer smallGraph col-lg-6">
     <div class="row">
         <div class="col-xs-10">
         </div>
     </div>
     <div class="graphBorder"></div>
-    <div class="jqplot" style="display:inline-block; float:left"></div>
+    <div class="jqplot" width="399" style="display:inline-block; width:399px; float:left"></div>
     <div class="sideTextContainer graphBodyRight col-xs-3"></div>
 </div>
 
