--- a/osv/templates/boxes/ThreadsTable.html
+++ b/osv/templates/boxes/ThreadsTable.html
@@ -1,4 +1,4 @@
-    <table class="graphHolder col-lg-6 table">
+    <table class="roundedContainer smallGraph col-lg-6 table">
       <thead>
       <tr><td></td> <td> name </td> <td> ID </td> <td> %CPU </td> </tr>
       </thead>
