--- a/osv/templates/boxes/TracePoints.html
+++ b/osv/templates/boxes/TracePoints.html
@@ -1,10 +1,9 @@
-<div class="panel panel-default" style="width:700px; display: inline-block">
-  <div class="panel-heading">
-    <h3 class="panel-title">Selected Tracepoints</h3>
-  </div>
-    <table class="table">
+<div class="col-xs-6">
+    <table class="table" style="position:relative; left:-25px">
     <tbody></tbody>
 	</table>
-	<button type="button" class="btn btn-danger clearAll">Clear all</button>
+</div>
+<div class="col-xs-1" style="height: inherit;">
+    <div style="height: inherit; border-right: 1px solid #e8e8e8; width: 43px; height: 100%;"></div>
 </div>
 
