--- a/osv/templates/boxes/TracePointLine.html
+++ b/osv/templates/boxes/TracePointLine.html
@@ -2,5 +2,5 @@
   <td><span class="name">{{name}}</span></td>
   <td><canvas style="vertical-align:top; margin: 0 30px" id="smoothie-{{name}}" width="250" height="30px"></canvas></td>
   <td><span class="count" style="margin-right:20px">{{count}}</span></td>
-  <td><div class="removeTrace" data-id="{{name}}" style="display:inline-block; cursor:pointer;"> <i class="fa fa-minus-circle"></i> </div></td>
+  <td><div class="removeTrace" data-remove-trace data-tracepoint-name="{{name}}" style="display:inline-block; cursor:pointer;"> <i class="fa fa-minus-circle"></i> </div></td>
 </tr>
