--- a/osv/templates/boxes/TracePoints.html
+++ b/osv/templates/boxes/TracePoints.html
@@ -1,5 +1,5 @@
 <div class="col-xs-6">
-    <table class="table" style="position:relative; left:-25px">
+    <table class="table" style="z-index:2; position:relative; left:-25px">
     <tbody></tbody>
 	</table>
 </div>
