Implemented new layout for threads tab
Implemented the new layout for the threads tab.

--- a/osv/templates/boxes/ThreadsTable.html
+++ b/osv/templates/boxes/ThreadsTable.html
@@ -1,13 +1,16 @@
-<div class="rightBoxCheckElements threadsList">
+<div class="graphBodyRight col-xs-4">
+
+	<div class="rightBoxCheckElements threadsList">
 
 
-  <input type="text" class="form-control filterThreads" placeholder="Search...">
+	  <input type="text" class="form-control filterThreads" placeholder="Search...">
 
-  <div class="selectedThreads">
-      
-  </div>
-  <hr style="border: solid 2px gray;"/>
-  <div class="unselectedThreads">
-    
-  </div>
+	  <div class="selectedThreads" style="max-height:calc(50% - 40px); overflow:auto;">
+	      
+	  </div>
+	  <hr style="border: solid 2px gray;"/>
+	  <div class="unselectedThreads" style="max-height:calc(50% - 40px); overflow:auto;">
+	    
+	  </div>
+	</div>
 </div>
