--- a/public/dashboard_static/styles/style.css
+++ b/public/dashboard_static/styles/style.css
@@ -230,7 +230,7 @@ html,body{height:100%; background-color: #f8f8f8;}
     height: 20px;  
 }
 .threadsTimeline {
-    width: 900px;
+    width: 100%;
     border: 1px solid #ddd;
 }
 .threadsTimeline>tbody>tr>td:not(:first-child) {
@@ -313,6 +313,7 @@ span.status { color: #333; font-size: 10px; vertical-align: top;}
 #profiler {
     padding: 15px 15px 15px 30px;
     height: 100%;
+    overflow: auto;
 }
 .rightBoxCheckElements {
     border: 1px solid rgb(207, 207, 207);
@@ -321,10 +322,6 @@ span.status { color: #333; font-size: 10px; vertical-align: top;}
     height: calc(100% - 40px);
 }
 
-.rightBoxCheckElements > div {
-    max-height: calc(100% - 73px);
-    overflow: auto;
-}
 .smallGraph {
     width: calc(50% - 15px);
     height: 325px;
