--- a/public/dashboard_static/styles/style.css
+++ b/public/dashboard_static/styles/style.css
@@ -328,3 +328,9 @@ span.status { color: #333; font-size: 10px; vertical-align: top;}
     margin-right: 15px;
     margin-bottom: 15px;
 }
+.confGraph.disabled {
+    color: #ccc;
+}
+.confGraph.disabled a:hover {
+    color:#ccc;
+}
