Added max-height to cpu table
The cpu table will break the layout when having a large # of cpus.
I have added a max-height that when passed, will add a scroll bar to the cpus table.

Fixes #41.

--- a/osv/templates/boxes/CPUTable.html
+++ b/osv/templates/boxes/CPUTable.html
@@ -1,4 +1,5 @@
-    <table class="roundedContainer smallGraph table table-striped">
+<div><div style="height:325px; overflow:auto;" class="smallGraph">
+      <table class="roundedContainer smallGraph table table-striped" style="width:100%;">
     <thead>
       <tr>
         <th>CPU</th>
@@ -12,3 +13,5 @@
       </tr>
     {{/each}}
     </table>
+
+</div></div>
