--- a/osv/templates/boxes/MBeansBox.html
+++ b/osv/templates/boxes/MBeansBox.html
@@ -1,4 +1,4 @@
-<div class="roundedContainer smallGraph col-lg-6" style="width:300px">
+<div class="roundedContainer smallGraph col-lg-6" style="width:300px; height:auto">
   <h5>MBeans</h5>
   <ul class="MBeans">
     {{#each this}}
