Added live update to static info box
Added a simple interval to the static info box.
The interval fetches new data, itereates over it and update
the specific table cells that were changed.

Solved #89.

--- a/osv/templates/boxes/StaticBox.html
+++ b/osv/templates/boxes/StaticBox.html
@@ -3,7 +3,7 @@
         {{#each this }}
         <tr>
             <td>{{key}} </td>
-            <td>{{value}} </td>
+            <td data-key="{{key}}">{{value}} </td>
         </tr>
         {{/each}}
     </table>
