added custom background of sideText labels

--- a/osv/templates/boxes/SideText.html
+++ b/osv/templates/boxes/SideText.html
@@ -1,6 +1,6 @@
 {{#each this}}
 <div style="height:20px;">&nbsp;</div>
-<div style="background: #ff9900; color: white; text-align: center">{{label}}</div>
+<div style="background: {{#if background}}{{background}}{{else}}#CCCCCC{{/if}}; color: white; text-align: center">{{label}}</div>
 <div style="text-align: -webkit-center;">
     <div style="font-size: 20px; display: table-cell;">{{value}}</div>
     <div style="font-size: 12px; display: table-cell;">{{unit}}</div>
