--- a/osv/templates/boxes/GraphBox.html
+++ b/osv/templates/boxes/GraphBox.html
@@ -10,5 +10,11 @@
         </div>
     </div>
     <div class="graphBorder"></div>
-    <div class="jqplot"></div>
+    <div class="jqplot" style="position: relative; height: 250px;"></div>
+
+    <div class="colorMap" style=" margin-top:5px;">
+    	{{#each settings.series}}
+	    	<div class="status" style="background: {{color}};"></div> <span>{{label}}</span>
+    	{{/each}}
+	</div>
 </div>
