--- a/osv/templates/boxes/ThreadsGraph.html
+++ b/osv/templates/boxes/ThreadsGraph.html
@@ -2,7 +2,8 @@
 	<div class="roundedContainer">
 		<div class="row graph_header">
 		    <div class="col-xs-11">
-		        <h4 style="margin-left:5px">{{ title }}</h4>
+
+		        <h4 style="margin-left:5px">{{ title }} - {{settings.series}}</h4>
 		    </div>
 		</div>
 	    <div class="row">
@@ -11,5 +12,10 @@
 	    </div>
 	    <div class="graphBorder"></div>
 	    <div class="jqplot"></div>
+	    <div class="colorMap" style=" margin-top:5px;">
+	    	{{#each settings.series}}
+		    	<div class="status" style="background: {{color}};"></div> <span>{{label}}</span>
+	    	{{/each}}
+		</div>
 	</div>
 </div>	
