added proper title to side text graph boxes

--- a/osv/templates/boxes/SideTextGraphBox.html
+++ b/osv/templates/boxes/SideTextGraphBox.html
@@ -1,7 +1,9 @@
 <div class="roundedContainer smallGraph col-lg-6">
-    <div class="row">
-        <div class="col-xs-10">
+    <div class="row graph_header">
+        <div class="col-xs-11">
+            <h4>{{ title }}</h4>
         </div>
+        <div class="col-xs-1 confGraph disabled"><a><span class="glyphicon glyphicon-cog"></span></a></div>
     </div>
     <div class="graphBorder"></div>
     <div class="jqplot" width="399" style="display:inline-block; width:399px; float:left"></div>
