--- a/osv/templates/boxes/SideTextGraphBox.html
+++ b/osv/templates/boxes/SideTextGraphBox.html
@@ -6,9 +6,9 @@
         <div class="col-xs-1 confGraph disabled"><a><span class="glyphicon glyphicon-cog"></span></a></div>
     </div>
     <div class="graphBorder"></div>
-    <div class="jqplot" width="399" style="display:inline-block; width:399px; float:left"></div>
+    <div class="jqplot" width="399" style="display:inline-block; width:399px; height:250px; float:left"></div>
     <div class="sideTextContainer graphBodyRight col-xs-3"></div>
-	<div class="colorMap" style=" margin-top:5px;">
+	<div class="colorMap" style=" margin-top:5px; height:20px">
 	{{#each settings.series}}
     	<div class="status" style="background: {{color}};"></div> <span>{{label}}</span>
 	{{/each}}
