--- a/public/dashboard_static/styles/style.css
+++ b/public/dashboard_static/styles/style.css
@@ -182,7 +182,7 @@ html,body{height:100%; background-color: #f8f8f8;}
 }
 
 .graphBodyRight {
-    height:100%;
+    height:257px;
 }
 
 .confGraph {
@@ -247,7 +247,7 @@ span.status { color: #333; font-size: 10px; vertical-align: top;}
 
 .colorMap {font-size: 10px;}
 .colorMap span { vertical-align: middle }
-.colorMap .status { height:10px; width: 10px; border: 1px solid #ddd; display: inline-block; vertical-align: middle}
+.colorMap .status { margin-left:5px; height:10px; width: 10px; border: 1px solid #ddd; display: inline-block; vertical-align: middle}
 
 .MBeans,
 .MBeans ul,
