fixed sidetext graph boxes labels

--- a/osv/templates/boxes/SideTextGraphBox.html
+++ b/osv/templates/boxes/SideTextGraphBox.html
@@ -7,7 +7,7 @@
     </div>
     <div class="graphBorder"></div>
     <div class="jqplot" width="399" style="display:inline-block; width:399px; height:250px; float:left"></div>
-    <div class="sideTextContainer graphBodyRight col-xs-3"></div>
+    <div class="sideTextContainer graphBodyRight col-xs-3" style="height:257px;"></div>
 	<div class="colorMap" style=" margin-top:5px; height:20px">
 	{{#each settings.series}}
     	<div class="status" style="background: {{color}};"></div> <span>{{label}}</span>
