--- a/osv/templates/boxes/ThreadsGraph.html
+++ b/osv/templates/boxes/ThreadsGraph.html
@@ -3,7 +3,7 @@
 		<div class="row graph_header">
 		    <div class="col-xs-11">
 
-		        <h4 style="margin-left:5px">{{ title }} - {{settings.series}}</h4>
+		        <h4 style="margin-left:5px">{{ title }}</h4>
 		    </div>
 		</div>
 	    <div class="row">
