--- a/public/dashboard_static/styles/style.css
+++ b/public/dashboard_static/styles/style.css
@@ -364,3 +364,47 @@ span.status { color: #333; font-size: 10px; vertical-align: top;}
 .confGraph.disabled a:hover {
     color:#ccc;
 }
+
+.thread .select {
+    display: inline-block;
+    font-size: 18px;
+    font-weight: 600;
+    border: 1px solid #ccc;
+    height: 18px;
+    vertical-align: middle;
+    width: 18px;
+    line-height: 17px;
+    text-align: center;
+    border-radius: 3px;
+}
+.thread .select::after{
+    content: "+";
+}
+
+.thread .unselect {
+    display: inline-block;
+    font-size: 13px;
+    font-weight: 600;
+    border: 1px solid #ccc;
+    height: 18px;
+    vertical-align: middle;
+    width: 18px;
+    line-height: 17px;
+    text-align: center;
+    border-radius: 3px;
+}
+.thread .unselect::after{
+    content: "\f00d";
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    color: red;
+}
+.thread .radio label, .checkbox label {
+    padding-left:0;
+}
+.thread .bar {
+    margin-left:22px;
+}
