added new selection style to trace list as well

--- a/osv/templates/boxes/TraceList.html
+++ b/osv/templates/boxes/TraceList.html
@@ -18,7 +18,7 @@
             <div data-tracepoint-name="{{@key}}" data-add-trace>
                 <div class="checkbox">
                     <label>
-                        <input type="checkbox"> {{@key}}
+                        <div class="select"></div> {{@key}}
                     </label>
                 </div>
                 <hr style="margin:0px"/>
