chagned treaces and threads lists to occupy 100% of the height

--- a/osv/templates/boxes/ThreadsTable.html
+++ b/osv/templates/boxes/ThreadsTable.html
@@ -1,15 +1,15 @@
 <div class="graphBodyRight col-xs-4">
 
-	<div class="rightBoxCheckElements threadsList">
+	<div class="rightBoxCheckElements threadsList" style="overflow:auto">
 
 
 	  <input type="text" class="form-control filterThreads" placeholder="Search...">
 
-	  <div class="selectedThreads" style="max-height:calc(50% - 40px); overflow:auto;">
+	  <div class="selectedThreads">
 	      
 	  </div>
 	  <hr style="border: solid 2px gray;"/>
-	  <div class="unselectedThreads" style="max-height:calc(50% - 40px); overflow:auto;">
+	  <div class="unselectedThreads">
 	    
 	  </div>
 	</div>
